syntax = "proto3";

package card;

option go_package = "./card";
//goctl rpc protoc proto/card.proto --go_out=./pb --go-grpc_out=./pb --zrpc_out=./card --style=goZero


service CardService {
  rpc OpenCard(OpenCardReq) returns (OpenCardResp);
}


message OpenCardReq {
}

message OpenCardResp {
}